Fix Security, Add Front-end integration

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+frontend:
+    resource: "@CvBundle/Resources/config/routing.yml"
+    prefix:   /
+
 backend:
     resource: "@BackendBundle/Resources/config/routing.yml"
     prefix:   /admin
