--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,4 +26,6 @@ security:
         #- { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/messages, role: IS_AUTHENTICATED_ANONYMOUSLY, methods: [POST] }
-        - { path: ^/, role: ROLE_ADMIN }
+        - { path: ^/admin, role: ROLE_ADMIN }
+        - { path: ^/api, role: ROLE_ADMIN }
+        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
