Fix Security, add error page, fix security link google API

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,9 @@ security:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
+                always_use_default_target_path: true
+                default_target_path: /admin
+                use-referer: true
             logout:       true
             anonymous:    true
 
