--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,7 +28,7 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         #- { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/messages, role: IS_AUTHENTICATED_ANONYMOUSLY, methods: [POST] }
+        - { path: ^/api/messages, role: IS_AUTHENTICATED_ANONYMOUSLY, methods: [POST] }
         - { path: ^/admin, role: ROLE_ADMIN }
         - { path: ^/api, role: ROLE_ADMIN }
         - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
