--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,5 @@
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
-/web/static
+/web/uploads/documents/
 /src/CvBundle/Resources/views/Front/*
